--- a/SMO_Modification1.ipynb
+++ b/SMO_Modification1.ipynb
@@ -189,7 +189,7 @@
     "    \n",
     "    \n",
     "    ##############################################################################################\n",
-    "    #subprodedure examineExample\n",
+    "    #subprocedure examineExample\n",
     "    \n",
     "    def examineExample(i2):\n",
     "\n",
