--- a/SMO_Modification1.ipynb
+++ b/SMO_Modification1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -76,11 +76,16 @@
     "            return 4\n",
     "        \n",
     "    def F(i,alpha):\n",
-    "        k = alpha * label;\n",
-    "        v = data[:,i]\n",
-    "        out = - label[i]\n",
-    "        for j in range(l):\n",
-    "            out = out + alpha[j]*label[j]*kernel(data[:,i],data[:,j])\n",
+    "        \n",
+    "        #avoid for loop in case of standard scalar product kernel\n",
+    "        if kernel_identifier == 'standard scalar product':\n",
+    "            k = alpha * label;\n",
+    "            m = np.dot(data[:,i],data)\n",
+    "            out = -label[i] + np.dot(k,m)\n",
+    "        else: \n",
+    "            out = - label[i]\n",
+    "            for j in range(l):\n",
+    "                out += alpha[j]*label[j]*kernel(data[:,i],data[:,j])\n",
     "        return out\n",
     "    \n",
     "    \n",
@@ -91,6 +96,7 @@
     "    \n",
     "    ##############################################################################################\n",
     "    # subprocedure takeStep\n",
+    "    \n",
     "    def takeStep(i1,i2):\n",
     "\n",
     "    \n",
@@ -145,18 +151,22 @@
     "    \n",
     "        # update fcache[i] here for i in I_0: a[0:3][:,4:9]\n",
     "        ind_0 = (np.nonzero(I[0,:]))[0]\n",
-    "        #irgendwie for-Schleife wegbasteln?\n",
-    "        #fcache[ind_0] += y1*(a1-alph1)*kernel(data[:][:,ind_0],data[:,i1]) + y2*(a2-alph2)*kernel(data[:][:,ind_0],data[:,i2])\n",
-    "        for i in ind_0:\n",
-    "            fcache[i] = fcache[i] + y1*(a1-alph1)*kernel(data[:,i],data[:,i1]) + y2*(a2-alph2)*kernel(data[:,i],data[:,i2])\n",
+    "        \n",
+    "        #avoid for loop in case of standard scalar product kernel\n",
+    "        if kernel_identifier == 'standard scalar product':\n",
+    "            fcache[ind_0] += y1*(a1-alph1)*np.dot(data[:,i1],data[:,ind_0]) + y2*(a2-alph2)*np.dot(data[:,i2],data[:,ind_0])\n",
+    "        else:\n",
+    "            for i in ind_0:\n",
+    "                fcache[i] = fcache[i] + y1*(a1-alph1)*kernel(data[:,i],data[:,i1]) + y2*(a2-alph2)*kernel(data[:,i],data[:,i2])\n",
     "    \n",
     "        # update fcache for indices i1 and i2\n",
     "        fcache[i1] = F1 + y1*(a1-alph1)*k11 + y2*(a2-alph2)*k12\n",
     "        fcache[i2] = F2 + y1*(a1-alph1)*k12 + y2*(a2-alph2)*k22\n",
-    "    \n",
+    "        \n",
+    "        \n",
     "        b_low[0] = -float('inf')\n",
     "        b_up[0] = - b_low[0]\n",
-    "    \n",
+    "        \n",
     "        if np.size(ind_0) > 0:\n",
     "            for i in ind_0:\n",
     "                if fcache[i] > b_low[0]:\n",
@@ -239,9 +249,11 @@
     "    ##############################################################################################\n",
     "    \n",
     "    \n",
-    "    #main routine\n",
+    "    \n",
+    "    \n",
     "    ##############################################################################################\n",
-    "\n",
+    "    #main routine\n",
+    "    \n",
     "    numChanged = 0\n",
     "    examineAll = 1\n",
     "\n",
@@ -291,97 +303,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def kernel(v1,v2):\n",
-    "    return np.dot(v1,v2)"
+    "    \"\"\"standard scalar product\"\"\"\n",
+    "    return np.dot(v1,v2)\n",
+    "\n",
+    "kernel_identifier = kernel.__doc__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'solution': array([  0.00000000e+00,   7.93562109e-01,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   1.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   7.88989162e-01,   0.00000000e+00,\n",
-      "         0.00000000e+00,   1.00000000e+00,   0.00000000e+00,\n",
-      "         1.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         1.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         1.09945764e-02,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   1.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   1.03336039e-01,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   1.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "        -7.31624708e-20,   3.06684571e-01,  -1.01643954e-20,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,  -3.93894673e-17,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         8.42034850e-01,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "        -8.47032947e-22,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   9.47177654e-01,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   1.67675329e-02,\n",
-      "         0.00000000e+00,   4.44488672e-01,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   1.00000000e+00,\n",
-      "         4.66419153e-01,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         1.00000000e+00,   0.00000000e+00,  -7.75035147e-20,\n",
-      "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-      "         4.66637375e-01,   0.00000000e+00]), 'violationcheck': 'no tol-violation'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#random test problem\n",
     "\n",
@@ -399,10 +341,19 @@
     "label2 = - label1;\n",
     "label = np.concatenate((label1,label2))\n",
     "\n",
-    "result = smo(data,label,1,kernel,1e-2,'yes')\n",
+    "result = smo(data,label,1,kernel,1e-5,'yes')\n",
     "\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
