--- a/ecoc.ipynb
+++ b/ecoc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
        "42000"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -87,18 +87,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def ecoc(labeled_data, labels, kernel=scalar_product, penalty=1, list_sigma=[0.1]*15):\n",
-    "    # \n",
+    "\n",
     "    labels=labels.astype(int);\n",
     "    l=np.shape(labeled_data)[0];\n",
+    "    n=np.shape(labeled_data)[1]\n",
     "    num_classifiers=15;\n",
     "    ecoc_labels=np.zeros((l,15));\n",
+    "    \n",
+    "    # compute barycenters of the points of each label\n",
+    "    barycenters = np.zeros((10,n));\n",
+    "        \n",
+    "    for i in range(10):\n",
+    "        ind = labels == i\n",
+    "        barycenters[i] = np.mean(labeled_data[ind], axis=0)\n",
     "    \n",
     "    # define code_word matrix, the ith row corresponds to the number i\n",
     "    # each column corresponds to a classifier that will have to be trained\n",
@@ -135,14 +143,15 @@
     "        list_kernel.append(svm.kernel);\n",
     "        \n",
     "    # pickle dump to save and call saved objects    \n",
-    "    pickle.dump((ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words), open( \"trained_ecoc_\"+str(number_of_im)+\".dat\", \"wb\" ))\n",
+    "    pickle.dump((ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters), \n",
+    "                open( \"trained_ecoc_\"+str(l)+\".dat\", \"wb\" ))\n",
     "    \n",
     "    # now I need to call a binary classifier for each column of ecoc_labels\n",
     "    # from decision functions we get seperating hyperplanes, margin, ... \n",
     "    # return those\n",
     "    \n",
     "    \n",
-    "    return ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words;"
+    "    return ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters;"
    ]
   },
   {
@@ -156,14 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# suppose we have an unlabeled data point\n",
-    "def predict_ecoc(unlabeled_data, labeled_data, ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words):\n",
+    "def predict_ecoc(unlabeled_data, labeled_data, ecoc_labels, list_supp_ind, \n",
+    "                 list_alpha, list_b, list_kernel, code_words, barycenters):\n",
     "    # every row is one data point\n",
     "    # number of rows = # of data points\n",
     "    l=np.shape(unlabeled_data)[0];\n",
@@ -171,7 +181,7 @@
     "    new_labels=np.zeros((l,15));\n",
     "    \n",
     "    temp_label_ind=[];\n",
-    "    final_labels = np.array(['NaN']*l);\n",
+    "    final_labels = np.array(['inf']*l);\n",
     "    \n",
     "    for classifier in range(15):\n",
     "        a_supp = list_alpha[classifier][list_supp_ind[classifier]];\n",
@@ -191,7 +201,12 @@
     "        temp_label_ind = [j for j in range(len(ham_dist)) if ham_dist[j] == min(ham_dist)]\n",
     "        if len(temp_label_ind)!=1:\n",
     "            print(\"Attention, data point could not be uniquely classified, index \" \n",
-    "                  + str(i) + \"possible classification\" + str(temp_label_ind));\n",
+    "                  + str(i) + \" possible classification \" + str(temp_label_ind));\n",
+    "            \n",
+    "            # ask which barycenter is closest out of temp_label_ind\n",
+    "            final_labels[i] = np.min(np.argmin([np.linalg.norm(unlabeled_data[i]-barycenters[k]) for k in temp_label_ind]))\n",
+    "            \n",
+    "            \n",
     "        else:\n",
     "            final_labels[i] = ham_dist.index(min(ham_dist));\n",
     "        \n",
@@ -209,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -217,10 +232,10 @@
     {
      "data": {
       "text/plain": [
-       "20"
+       "200"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,15 +249,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# call classifier with pickle.load\n",
-    "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words=ecoc(train_images_test, train_labels_test)\n",
-    "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words=pickle.load(open (\"trained_ecoc_\"+str(number_of_im)+\".dat\", \"rb\"))\n",
+    "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=ecoc(train_images_test, train_labels_test)\n",
+    "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=pickle.load(open (\"trained_ecoc_\"+str(number_of_im)+\".dat\", \"rb\"))\n",
     "\n"
    ]
   },
@@ -255,44 +270,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n",
-      "Attention, data point could not be uniquely classified, index 12possible classification[0, 5]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'NaN'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-153-db0df5c8d825>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[1;31m# call predict function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mpredicted_labels_test\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpredict_ecoc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_images\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnumber_of_im\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mnumber_of_im\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_images\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mnumber_of_im\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mecoc_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_supp_ind\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_alpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_b\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist_kernel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcode_words\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mpredicted_labels_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpredicted_labels_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[1;31m# print(\"predicted labels: \", predicted_labels_test)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'NaN'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# \"unknown\" data to be classified\n",
-    "number_of_test_data = 50\n",
+    "number_of_test_data = 300\n",
     "test_data = train_images[number_of_im:number_of_im+number_of_test_data]\n",
     "\n",
     "# call predict function\n",
-    "predicted_labels_test=predict_ecoc(train_images[number_of_im:number_of_im+20], train_images[:number_of_im], ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words)\n",
-    "predicted_labels_test = predicted_labels_test.astype(int)\n",
+    "predicted_labels_test=predict_ecoc(train_images[number_of_im:number_of_im+number_of_test_data], \n",
+    "                                   train_images[:number_of_im], ecoc_labels, list_supp_ind, list_alpha, \n",
+    "                                   list_b, list_kernel, code_words, barycenters)\n",
+    "predicted_labels_test = predicted_labels_test.astype(float)\n",
     "# print(\"predicted labels: \", predicted_labels_test)\n",
     "\n",
     "# get actual labels\n",
-    "train_labels_test=train_labels[number_of_im:number_of_im+20]\n",
-    "train_labels_test = train_labels_test.astype(int)\n",
+    "train_labels_test=train_labels[number_of_im:number_of_im+number_of_test_data]\n",
+    "train_labels_test = train_labels_test.astype(float)\n",
     "# print(\"actual labels: \", train_labels_test)\n",
     "\n",
     "print(\"number of correctly classified labels: \", sum(predicted_labels_test.astype(int)==train_labels_test.astype(int)), \n",
@@ -300,44 +297,6 @@
     "\n",
     "# check if there is are a couple of classifiers who make more mistakes than others\n",
     "# then we could possibly change some of the parameters\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   },
   {
