updated, includes barycenters

--- a/ecoc.ipynb
+++ b/ecoc.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -270,11 +270,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "Attention, data point could not be uniquely classified, index 45 possible classification [2, 8]\n",
+      "Attention, data point could not be uniquely classified, index 53 possible classification [0, 3, 6]\n",
+      "Attention, data point could not be uniquely classified, index 82 possible classification [1, 2]\n",
+      "Attention, data point could not be uniquely classified, index 93 possible classification [2, 7]\n",
+      "Attention, data point could not be uniquely classified, index 113 possible classification [1, 7]\n",
+      "Attention, data point could not be uniquely classified, index 120 possible classification [3, 9]\n",
+      "Attention, data point could not be uniquely classified, index 147 possible classification [0, 5]\n",
+      "Attention, data point could not be uniquely classified, index 153 possible classification [0, 3, 5, 6]\n",
+      "Attention, data point could not be uniquely classified, index 156 possible classification [5, 9]\n",
+      "Attention, data point could not be uniquely classified, index 169 possible classification [0, 5, 6]\n",
+      "Attention, data point could not be uniquely classified, index 174 possible classification [0, 6]\n",
+      "Attention, data point could not be uniquely classified, index 182 possible classification [1, 2]\n",
+      "Attention, data point could not be uniquely classified, index 197 possible classification [1, 2]\n",
+      "Attention, data point could not be uniquely classified, index 216 possible classification [4, 8]\n",
+      "Attention, data point could not be uniquely classified, index 263 possible classification [1, 2]\n",
+      "Attention, data point could not be uniquely classified, index 282 possible classification [1, 4]\n",
+      "Attention, data point could not be uniquely classified, index 290 possible classification [4, 7]\n",
+      "Attention, data point could not be uniquely classified, index 293 possible classification [1, 7]\n",
+      "number of correctly classified labels:  207  out of  300\n"
+     ]
+    }
+   ],
    "source": [
     "# \"unknown\" data to be classified\n",
     "number_of_test_data = 300\n",
