--- a/Cross_Validation.ipynb
+++ b/Cross_Validation.ipynb
@@ -172,62 +172,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Attention, data point could not be uniquely classified, index 4possible classification[7, 8]\n",
-      "Attention, data point could not be uniquely classified, index 29possible classification[1, 7]\n",
-      "Attention, data point could not be uniquely classified, index 44possible classification[1, 4]\n",
-      "Attention, data point could not be uniquely classified, index 53possible classification[1, 4]\n",
-      "Attention, data point could not be uniquely classified, index 58possible classification[4, 8]\n",
-      "Attention, data point could not be uniquely classified, index 63possible classification[0, 5]\n",
-      "Attention, data point could not be uniquely classified, index 71possible classification[4, 8]\n",
-      "Attention, data point could not be uniquely classified, index 80possible classification[5, 9]\n",
-      "Attention, data point could not be uniquely classified, index 84possible classification[4, 7]\n",
-      "Attention, data point could not be uniquely classified, index 94possible classification[1, 7]\n",
-      "Attention, data point could not be uniquely classified, index 97possible classification[1, 2]\n",
-      "Attention, data point could not be uniquely classified, index 101possible classification[2, 7, 8]\n",
-      "Attention, data point could not be uniquely classified, index 107possible classification[3, 5]\n",
-      "Attention, data point could not be uniquely classified, index 159possible classification[5, 9]\n",
-      "Attention, data point could not be uniquely classified, index 186possible classification[5, 6]\n",
-      "Attention, data point could not be uniquely classified, index 200possible classification[1, 2, 4, 8]\n",
-      "Attention, data point could not be uniquely classified, index 231possible classification[3, 5]\n",
-      "Attention, data point could not be uniquely classified, index 3possible classification[3, 5, 9]\n",
-      "Attention, data point could not be uniquely classified, index 6possible classification[3, 5]\n",
-      "Attention, data point could not be uniquely classified, index 63possible classification[1, 4, 8]\n",
-      "Attention, data point could not be uniquely classified, index 65possible classification[0, 6]\n",
-      "Attention, data point could not be uniquely classified, index 72possible classification[2, 7]\n",
-      "Attention, data point could not be uniquely classified, index 79possible classification[2, 8]\n",
-      "Attention, data point could not be uniquely classified, index 83possible classification[4, 8]\n",
-      "Attention, data point could not be uniquely classified, index 86possible classification[2, 7]\n",
-      "Attention, data point could not be uniquely classified, index 87possible classification[2, 8]\n",
-      "Attention, data point could not be uniquely classified, index 88possible classification[2, 4]\n",
-      "Attention, data point could not be uniquely classified, index 90possible classification[3, 5]\n",
-      "Attention, data point could not be uniquely classified, index 115possible classification[2, 7]\n",
-      "Attention, data point could not be uniquely classified, index 120possible classification[3, 9]\n",
-      "Attention, data point could not be uniquely classified, index 157possible classification[0, 6]\n",
-      "Attention, data point could not be uniquely classified, index 172possible classification[2, 7]\n",
-      "Attention, data point could not be uniquely classified, index 177possible classification[2, 7]\n",
-      "Attention, data point could not be uniquely classified, index 192possible classification[3, 5]\n",
-      "Attention, data point could not be uniquely classified, index 201possible classification[1, 2]\n",
-      "Attention, data point could not be uniquely classified, index 213possible classification[4, 7]\n",
-      "Attention, data point could not be uniquely classified, index 217possible classification[2, 4]\n",
-      "Attention, data point could not be uniquely classified, index 224possible classification[3, 5]\n",
-      "Attention, data point could not be uniquely classified, index 244possible classification[0, 3]\n",
-      "0.652\n",
-      "CPU times: user 21min 38s, sys: 15 s, total: 21min 53s\n",
-      "Wall time: 5min 30s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
-    "no_samples = 500\n",
+    "no_samples = 1500\n",
     "penalty = 6.\n",
     "score = cross_validation_ecoc(train_images[:no_samples], train_labels[:no_samples], penalty)\n",
     "print(score)"
@@ -2869,6 +2820,24 @@
     "\n",
     "# access: S[j][k] = mean score over all three trials for j'th C in C_list and for k'th sigma in sigma_list"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
