Toleranz von SMO von 1e-5 auf 1e-2 geaendert

--- a/ecoc.ipynb
+++ b/ecoc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
        "42000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -232,16 +232,16 @@
     {
      "data": {
       "text/plain": [
-       "200"
+       "500"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "number_of_im = 200;\n",
+    "number_of_im = 500;\n",
     "train_images_test = train_images[:number_of_im]\n",
     "train_labels_test = train_labels[:number_of_im]\n",
     "np.shape(train_images_test)[0]"
@@ -249,12 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 5min 29s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "# call classifier with pickle.load\n",
     "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=ecoc(train_images_test, train_labels_test)\n",
     "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=pickle.load(open (\"trained_ecoc_\"+str(number_of_im)+\".dat\", \"rb\"))\n",
@@ -270,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -280,25 +289,29 @@
      "output_type": "stream",
      "text": [
       "300\n",
-      "Attention, data point could not be uniquely classified, index 45 possible classification [2, 8]\n",
-      "Attention, data point could not be uniquely classified, index 53 possible classification [0, 3, 6]\n",
-      "Attention, data point could not be uniquely classified, index 82 possible classification [1, 2]\n",
-      "Attention, data point could not be uniquely classified, index 93 possible classification [2, 7]\n",
-      "Attention, data point could not be uniquely classified, index 113 possible classification [1, 7]\n",
-      "Attention, data point could not be uniquely classified, index 120 possible classification [3, 9]\n",
-      "Attention, data point could not be uniquely classified, index 147 possible classification [0, 5]\n",
-      "Attention, data point could not be uniquely classified, index 153 possible classification [0, 3, 5, 6]\n",
-      "Attention, data point could not be uniquely classified, index 156 possible classification [5, 9]\n",
-      "Attention, data point could not be uniquely classified, index 169 possible classification [0, 5, 6]\n",
-      "Attention, data point could not be uniquely classified, index 174 possible classification [0, 6]\n",
-      "Attention, data point could not be uniquely classified, index 182 possible classification [1, 2]\n",
-      "Attention, data point could not be uniquely classified, index 197 possible classification [1, 2]\n",
-      "Attention, data point could not be uniquely classified, index 216 possible classification [4, 8]\n",
-      "Attention, data point could not be uniquely classified, index 263 possible classification [1, 2]\n",
-      "Attention, data point could not be uniquely classified, index 282 possible classification [1, 4]\n",
-      "Attention, data point could not be uniquely classified, index 290 possible classification [4, 7]\n",
-      "Attention, data point could not be uniquely classified, index 293 possible classification [1, 7]\n",
-      "number of correctly classified labels:  207  out of  300\n"
+      "Attention, data point could not be uniquely classified, index 10 possible classification [3, 9]\n",
+      "Attention, data point could not be uniquely classified, index 15 possible classification [1, 2]\n",
+      "Attention, data point could not be uniquely classified, index 18 possible classification [4, 7]\n",
+      "Attention, data point could not be uniquely classified, index 20 possible classification [6, 9]\n",
+      "Attention, data point could not be uniquely classified, index 37 possible classification [3, 9]\n",
+      "Attention, data point could not be uniquely classified, index 47 possible classification [2, 8]\n",
+      "Attention, data point could not be uniquely classified, index 51 possible classification [1, 8]\n",
+      "Attention, data point could not be uniquely classified, index 68 possible classification [2, 7]\n",
+      "Attention, data point could not be uniquely classified, index 83 possible classification [0, 6]\n",
+      "Attention, data point could not be uniquely classified, index 118 possible classification [1, 8]\n",
+      "Attention, data point could not be uniquely classified, index 134 possible classification [5, 6]\n",
+      "Attention, data point could not be uniquely classified, index 137 possible classification [4, 8]\n",
+      "Attention, data point could not be uniquely classified, index 154 possible classification [4, 7]\n",
+      "Attention, data point could not be uniquely classified, index 157 possible classification [4, 7]\n",
+      "Attention, data point could not be uniquely classified, index 176 possible classification [0, 5]\n",
+      "Attention, data point could not be uniquely classified, index 181 possible classification [5, 9]\n",
+      "Attention, data point could not be uniquely classified, index 206 possible classification [3, 9]\n",
+      "Attention, data point could not be uniquely classified, index 215 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 222 possible classification [0, 6]\n",
+      "Attention, data point could not be uniquely classified, index 225 possible classification [7, 8]\n",
+      "Attention, data point could not be uniquely classified, index 252 possible classification [0, 5]\n",
+      "Attention, data point could not be uniquely classified, index 267 possible classification [0, 5]\n",
+      "number of correctly classified labels:  211  out of  300\n"
      ]
     }
    ],
