unnoetiges epsilon in SMO_Modification1 entfernt

--- a/SMO_Modification1.ipynb
+++ b/SMO_Modification1.ipynb
@@ -29,7 +29,8 @@
     "# careful, smo expects data in the shape of a dxl array, where d is the dimension of the data points and l the number of data points!\n",
     "def smo(data,label,C,kernel,tol,violationcheckyesorno):\n",
     "    \n",
-    "    eps = 1e-12\n",
+    "    #bisher unnoetig\n",
+    "    #eps = 1e-12\n",
     "    \n",
     "    l = label.shape[0]\n",
     "    alpha = np.zeros(l)\n",
@@ -135,8 +136,8 @@
     "            #print('Error: eta == 0')\n",
     "            raise ValueError('Error: eta == 0')\n",
     "    \n",
-    "        if abs(a2-alph2) < eps*(a2+alph2+eps):\n",
-    "            return 0\n",
+    "        #if abs(a2-alph2) < eps*(a2+alph2+eps):\n",
+    "            #return 0\n",
     "    \n",
     "        a1 = alph1 + s*(alph2-a2)\n",
     "    \n",
