1000 Trainingspunkte, dauert ewig, Klassifizierung trotzdem kacke, WTF

--- a/ecoc.ipynb
+++ b/ecoc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
        "42000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -232,16 +232,16 @@
     {
      "data": {
       "text/plain": [
-       "200"
+       "1000"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "number_of_im = 200;\n",
+    "number_of_im = 1000;\n",
     "train_images_test = train_images[:number_of_im]\n",
     "train_labels_test = train_labels[:number_of_im]\n",
     "np.shape(train_images_test)[0]"
@@ -249,12 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1h 4min 41s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "# call classifier with pickle.load\n",
     "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=ecoc(train_images_test, train_labels_test)\n",
     "ecoc_labels, list_supp_ind, list_alpha, list_b, list_kernel, code_words, barycenters=pickle.load(open (\"trained_ecoc_\"+str(number_of_im)+\".dat\", \"rb\"))\n",
@@ -270,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -280,25 +289,32 @@
      "output_type": "stream",
      "text": [
       "300\n",
-      "Attention, data point could not be uniquely classified, index 45 possible classification [2, 8]\n",
-      "Attention, data point could not be uniquely classified, index 53 possible classification [0, 3, 6]\n",
-      "Attention, data point could not be uniquely classified, index 82 possible classification [1, 2]\n",
-      "Attention, data point could not be uniquely classified, index 93 possible classification [2, 7]\n",
-      "Attention, data point could not be uniquely classified, index 113 possible classification [1, 7]\n",
-      "Attention, data point could not be uniquely classified, index 120 possible classification [3, 9]\n",
-      "Attention, data point could not be uniquely classified, index 147 possible classification [0, 5]\n",
-      "Attention, data point could not be uniquely classified, index 153 possible classification [0, 3, 5, 6]\n",
-      "Attention, data point could not be uniquely classified, index 156 possible classification [5, 9]\n",
-      "Attention, data point could not be uniquely classified, index 169 possible classification [0, 5, 6]\n",
-      "Attention, data point could not be uniquely classified, index 174 possible classification [0, 6]\n",
-      "Attention, data point could not be uniquely classified, index 182 possible classification [1, 2]\n",
-      "Attention, data point could not be uniquely classified, index 197 possible classification [1, 2]\n",
-      "Attention, data point could not be uniquely classified, index 216 possible classification [4, 8]\n",
-      "Attention, data point could not be uniquely classified, index 263 possible classification [1, 2]\n",
-      "Attention, data point could not be uniquely classified, index 282 possible classification [1, 4]\n",
-      "Attention, data point could not be uniquely classified, index 290 possible classification [4, 7]\n",
-      "Attention, data point could not be uniquely classified, index 293 possible classification [1, 7]\n",
-      "number of correctly classified labels:  207  out of  300\n"
+      "Attention, data point could not be uniquely classified, index 6 possible classification [0, 9]\n",
+      "Attention, data point could not be uniquely classified, index 19 possible classification [1, 2]\n",
+      "Attention, data point could not be uniquely classified, index 45 possible classification [0, 5]\n",
+      "Attention, data point could not be uniquely classified, index 47 possible classification [0, 5]\n",
+      "Attention, data point could not be uniquely classified, index 50 possible classification [0, 9]\n",
+      "Attention, data point could not be uniquely classified, index 64 possible classification [4, 7]\n",
+      "Attention, data point could not be uniquely classified, index 72 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 84 possible classification [0, 5, 6]\n",
+      "Attention, data point could not be uniquely classified, index 86 possible classification [2, 4]\n",
+      "Attention, data point could not be uniquely classified, index 112 possible classification [3, 5]\n",
+      "Attention, data point could not be uniquely classified, index 122 possible classification [0, 3]\n",
+      "Attention, data point could not be uniquely classified, index 125 possible classification [1, 2, 4, 7]\n",
+      "Attention, data point could not be uniquely classified, index 127 possible classification [2, 8]\n",
+      "Attention, data point could not be uniquely classified, index 135 possible classification [0, 3, 6]\n",
+      "Attention, data point could not be uniquely classified, index 136 possible classification [7, 8]\n",
+      "Attention, data point could not be uniquely classified, index 148 possible classification [1, 4]\n",
+      "Attention, data point could not be uniquely classified, index 157 possible classification [3, 6]\n",
+      "Attention, data point could not be uniquely classified, index 161 possible classification [1, 8]\n",
+      "Attention, data point could not be uniquely classified, index 163 possible classification [0, 5]\n",
+      "Attention, data point could not be uniquely classified, index 164 possible classification [4, 8]\n",
+      "Attention, data point could not be uniquely classified, index 179 possible classification [0, 9]\n",
+      "Attention, data point could not be uniquely classified, index 184 possible classification [5, 9]\n",
+      "Attention, data point could not be uniquely classified, index 196 possible classification [4, 7]\n",
+      "Attention, data point could not be uniquely classified, index 280 possible classification [5, 6]\n",
+      "Attention, data point could not be uniquely classified, index 292 possible classification [2, 8]\n",
+      "number of correctly classified labels:  221  out of  300\n"
      ]
     }
    ],
